# wm-predictor

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: auth.py  bracket.py  matches.py  predictions.py  simulation.py  teams.py
backend/app/data/: apply_results.py  compute_attack_defense.py  confederations.py  historical_ingestor.py  manual_results.py  odds_ingestor.py  recompute_elo.py  refresh_all.py  schedule_sync.py  seed.py  wc2026_bracket.py  wc2026_groups.py
backend/app/models/: __init__.py  match.py  odds.py  prediction.py  simulation.py  team.py  user.py
backend/app/prediction/: elo.py  ensemble.py  form.py  h2h.py  odds_aggregator.py
backend/app/simulation/: monte_carlo.py
frontend/: Dockerfile.prod  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Bracket.tsx  GroupCard.tsx  MatchCard.tsx
frontend/src/pages/: Groups.tsx  Login.tsx  Playoffs.tsx  Simulation.tsx
frontend/src/state/: predictions.tsx
frontend/src/types/: index.ts
frontend/src/utils/: datetime.ts  flag.ts  standings.ts
scripts/: refresh.sh
